updated docstrings for aliases; project files reorganisation

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -90,7 +90,7 @@
     }
    ],
    "source": [
-    "img = cv3.imread('img.jpeg')\n",
+    "img = cv3.imread('data/image.jpg')\n",
     "plt.imshow(img)"
    ]
   },
@@ -167,7 +167,7 @@
    },
    "outputs": [],
    "source": [
-    "impath = Path('img.jpeg')\n",
+    "impath = Path('data/image.jpg')\n",
     "img = cv3.imread(impath)"
    ]
   },
@@ -266,7 +266,7 @@
     }
    ],
    "source": [
-    "img = cv3.imread('img.jpeg')\n",
+    "img = cv3.imread('data/image.jpg')\n",
     "plt.imshow(img)"
    ]
   },
@@ -528,7 +528,7 @@
     }
    ],
    "source": [
-    "rgb = cv3.imread('img.jpeg')\n",
+    "rgb = cv3.imread('data/image.jpg')\n",
     "bgr = cv3.bgr(rgb) # or cv3.rgb\n",
     "plt.imshow(bgr)"
    ]
@@ -702,7 +702,7 @@
    ],
    "source": [
     "cv3.opt.set_rgb()\n",
-    "img = cv3.imread('img.jpeg')\n",
+    "img = cv3.imread('data/image.jpg')\n",
     "plt.imshow(img)"
    ]
   },
@@ -2533,7 +2533,7 @@
    },
    "outputs": [],
    "source": [
-    "cap = cv3.Video('vid.mp4') # or cv3.VideoCapture / cv3.VideoReader"
+    "cap = cv3.Video('data/vid.mp4') # or cv3.VideoCapture / cv3.VideoReader"
    ]
   },
   {
@@ -3026,7 +3026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -3040,7 +3040,7 @@
     }
    ],
    "source": [
-    "with cv3.Video('vid.mp4') as cap:\n",
+    "with cv3.Video('data/vid.mp4') as cap:\n",
     "    frame = cap.read()\n",
     "    \n",
     "print('cap.is_opened:', cap.is_opened)"
