--- a/example.ipynb
+++ b/example.ipynb
@@ -46,7 +46,7 @@
     "import cv2 as cv\n",
     "import sys, os\n",
     "\n",
-    "img = cv.imread(cv.samples.findFile(\"img.jpeg\"))\n",
+    "img = cv.imread(cv.samples.findFile(\"data/image.jpg\"))\n",
     "if img is None:\n",
     "    sys.exit(\"Could not read the image.\")\n",
     "\n",
@@ -98,7 +98,7 @@
     "\n",
     "import cv3\n",
     "\n",
-    "img = cv3.imread('img.jpeg')\n",
+    "img = cv3.imread('data/image.jpg')\n",
     "gray = cv3.rgb2gray(img)\n",
     "cv3.imwrite('outputs/gray.jpg', gray, mkdir=True)"
    ]
@@ -140,7 +140,7 @@
     "\n",
     "import cv2 as cv\n",
     "\n",
-    "img = cv.imread(cv.samples.findFile(\"img.jpeg\"))\n",
+    "img = cv.imread(cv.samples.findFile(\"data/image.jpg\"))\n",
     "img = cv.cvtColor(img, cv.COLOR_BGR2RGB)\n",
     "\n",
     "cv.rectangle(img, (40, 30), (260, 220), (0, 0, 255), 3)\n",
@@ -176,7 +176,7 @@
     "\n",
     "import cv3\n",
     "\n",
-    "img = cv3.imread('img.jpeg')\n",
+    "img = cv3.imread('data/image.jpg')\n",
     "\n",
     "cv3.rectangle(img, 40, 30, 260, 220, color=\"blue\", t=3)\n",
     "cv3.text(img, \"Parrot\", 50, 25, color=\"white\", t=2);"
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "ea62994a-7384-4898-9918-f53d9fa6fad4",
    "metadata": {
     "tags": []
@@ -219,7 +219,7 @@
     "\n",
     "import cv2 as cv\n",
     "\n",
-    "cap = cv.VideoCapture('vid.mp4')\n",
+    "cap = cv.VideoCapture('data/vid.mp4')\n",
     "fourcc = cv.VideoWriter_fourcc(*'XVID')\n",
     "out = None\n",
     "i = 0\n",
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "id": "69c70773-34d2-42b9-a968-bcc254ccd82b",
    "metadata": {
     "tags": []
@@ -278,7 +278,7 @@
     "import cv3\n",
     "\n",
     "with (\n",
-    "\tcv3.Video('vid.mp4') as cap,\n",
+    "\tcv3.Video('data/vid.mp4') as cap,\n",
     "\tcv3.Video('output.avi', 'w', fps=20, fourcc='XVID') as out,\n",
     "\tcv3.Window('frame') as ww\n",
     "):\n",
@@ -497,7 +497,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001B[31m\u001B[1mrequirements:\u001B[0m C:\\Users\\Rodion Gorodenko\\AppData\\Local\\Programs\\Python\\Python39\\Lib\\site-packages\\requirements.txt not found, check failed.\n"
+      "\u001b[31m\u001b[1mrequirements:\u001b[0m C:\\Users\\Rodion Gorodenko\\AppData\\Local\\Programs\\Python\\Python39\\Lib\\site-packages\\requirements.txt not found, check failed.\n"
      ]
     },
     {
@@ -557,7 +557,7 @@
     "\n",
     "Path('images').mkdir(exist_ok=True, parents=True)\n",
     "for i in range(3):\n",
-    "    shutil.copy('img.jpeg', f'images/img{i}.jpeg')"
+    "    shutil.copy('data/image.jpg', f'images/img{i}.jpeg')"
    ]
   },
   {
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "53c028ab-c000-4854-995c-fd0ca7be2864",
    "metadata": {
     "tags": []
@@ -755,7 +755,7 @@
     "import cv3\n",
     "\n",
     "with cv3.Video('output.mp4', 'w') as out:\n",
-    "    with cv3.Video('vid.mp4') as cap:\n",
+    "    with cv3.Video('data/vid.mp4') as cap:\n",
     "        for frame in cap:\n",
     "            gray = cv3.rgb2gray(frame)\n",
     "            out.write(gray)"
